# adventofcode2025

./: .gitignore  pyproject.toml
day_01/: part1_solution.py  part2_solution.py
day_02/: part1_solution.py  part2_solution.py
day_03/: part1_solution.py  part2_solution.py  puzzle_text_day_03.md
day_04/: part1_solution.py  part2_solution.py  puzzle_text_day_04.md
day_05/: part1_solution.py  puzzle_text_day_05.md
scripts/: create_folders.py  save_todays_puzzle_data.py  utilities.py
