[project]
name = "adventofcode2025"
version = "0.1.0"
description = ""
authors = [
    {name = "Jonathan Bowden",email = "bowden.jr@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "advent-of-code-data (>=2.1.0,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
